# CrabPaste

./: CLAUDE.md  Cargo.toml  payload-dsp-1.json  payload-dsp-2.json  payload.json  payload2.json
.claude/: settings.local.json
.github/workflows/: build.yml
src/: app.rs  export.rs  main.rs  parser.rs
