[package]
name = "crabpaste"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
eframe = "0.34.2"
egui = "0.34.2"
egui_extras = "0.34.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

[build-dependencies]
winres = "0.1"
