[package]
name = "crabpaste"
version = "0.1.0"
edition = "2024"


[dependencies]
arboard = "3.6.1"
csv = "1.4.0"
eframe = { version = "0.34.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = "0.34.2"
egui_extras = "0.34.2"
rfd = "0.17.2"
rust_xlsxwriter = "0.95.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }

[build-dependencies]
winres = "0.1"
